k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    name: ecommerce
    app.kubernetes.io/part-of: novacommerce-platform
